--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
             </ul>
         </section>
         
-        <!-- <script src="app.js" defer></script> -->
-        <script src="app.js"></script>
+        <script src="app.js" defer></script>
 
         <script>
             if ("serviceWorker" in navigator) {
