--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Cycle Tracker</title>
         <link rel="stylesheet" href="style.css" />
         <link rel="manifest" href="tracker.json" />
-        <link rel="icon" href="icons/circle.svg" />       
+        <link rel="icon" href="icons/tire.svg" />       
     </head>
 
     <body>
