--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width" />
         <title>Cycle Tracker</title>
         <link rel="stylesheet" href="style.css" />
-        <link rel="icon" href="icons/brush-icon.png" />
+        <link rel="icon" href="/icons/brush-icon.png" />
         <link rel="manifest" href="tracker.json" />
     </head>
 
