meta theme-color

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
+        <meta name="theme-color" content="#4285f4" />
         <title>Cycle Tracker</title>
         <link rel="stylesheet" href="style.css" />
         <link rel="icon" href="/icons/brush-icon.png" />
