--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="theme-color" content="#4285f4" />
         <title>Cycle Tracker</title>
         <link rel="stylesheet" href="style.css" />
-        <link rel="icon" type="image/png" href="/icons/brush-icon.png" />
+        <link rel="icon" type="image/png" href="icons/brush-icon.png" />
         <link rel="manifest" href="tracker.json" />
     </head>
 
