--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <meta name="theme-color" content="#4285f4" />
     <title>Cycle Tracker</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="manifest" href="cycletracker.json" />
-    <link rel="icon" href="icons/circle.svg" />
+    <link rel="icon" type="image/png" href="icons/brush-icon.png" />
   </head>
   <body>
     <h1>Period tracker</h1>
